# netron

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  README.md  tailwind.config.js
.cargo/: config.toml
.claude/: settings.local.json
app/: Cargo.toml
app/src/: apperror.rs  date_utils.rs  lib.rs  navbar.rs  surrealtypes.rs  theme.rs
app/src/auth/: account.rs  adapter_rs_surreal.rs  authcheck.rs  callback.rs  keys.rs  mod.rs  navbar.rs  session.rs  storage_authed_trait.rs  token.rs  ui_auth.rs  user.rs
app/src/chat/: mod.rs  models.rs  shared.rs  ui_chat.rs  websocket.rs
app/src/components/: alert.rs  animated_demo.rs  appheader.rs  button.rs  colors_ui_app.rs  dropdown.rs  feature_card.rs  footer.rs  form.rs  hero.rs  image_upload.rs  input.rs  label.rs  logo.rs  mod.rs  modal.rs  progress_bar.rs  qrcode.rs  section.rs  sidebar.rs  submit_button.rs  tooltip.rs
app/src/db/: connection.rs  mod.rs  settings.rs
app/src/email/: address.rs  resend.rs
app/src/p2p/: dual_iroh_test.rs  iroh.rs  iroh_ui.rs  mod.rs  wasm_chat.rs
app/src/screens/: chat.rs  home.rs  mod.rs  profile.rs
backend/: Cargo.toml
backend/src/: fallback.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
