[workspace]
resolver = "2"
members = ["src-tauri", "frontend", "backend", "app", "server"]

[workspace.dependencies]
leptos_meta = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_axum = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos-use = { version = "0.16.2" }
leptos_router = { git = "https://github.com/rvdende/leptos", branch = "css_hydration", features = [
    "nightly",
] }
server_fn = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
# Serialization
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }
serde_urlencoded = "0.7.1"

[patch.crates-io]
leptos = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_meta = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_router = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_axum = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
server_fn = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[workspace.metadata.leptos]]
# project name
name = "netron"
bin-package = "server"
lib-package = "frontend"
output-name = "netron"
assets-dir = "public"
tailwind-input-file = "input.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "0.0.0.0:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
