[workspace]
resolver = "2"
members = ["src-tauri", "frontend", "backend", "app", "server"]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["json", "multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
http = "1.3.1"

leptos_meta = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_axum = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos-use = { version = "0.16.2" }
leptos_router = { git = "https://github.com/rvdende/leptos", branch = "css_hydration", features = [
    "nightly",
] }
server_fn = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
# Serialization
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"

partial_struct = "0.4.5"
tw_merge = { version = "0.1.6", features = ["variant"] }
phosphor-leptos = "0.8.0"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.77", features = [
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "ProgressEvent",
    "DragEvent",
    "Event",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Window",
    "Performance",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Document",
] }
surrealdb = { version = "2.3.7", default-features = false, features = [
    "protocol-ws",
] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
time = "0.3.41"
regex = { version = "1.11.2", default-features = false, features = [
    "std",
    "perf",
] }
bytes = { version = "1.10.1", default-features = false, features = ["std"] }
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "sync",
] }
resend-rs = { version = "0.15.0" }
dotenvy = "0.15.7"

base64 = { version = "0.22.1", default-features = false, features = ["std"] }
uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "serde",
] }

cached = { version = "0.55.1", default-features = false, features = [
    "async",
    "proc_macro",
] }

rand = { version = "0.9.1" }

infer = { version = "0.16" }

# External services

reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# UI


# Testing
serial_test = { version = "3.2.0", features = ["file_locks"] }
wasm-bindgen-test = "0.3"

# Additional dependencies
thiserror = { version = "2.0", default-features = false }
tower = { version = "0.5.2", default-features = false, features = ["util"] }


[patch.crates-io]
leptos = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_meta = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_router = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_axum = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
server_fn = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[workspace.metadata.leptos]]
# project name
name = "netron"
bin-package = "server"
lib-package = "frontend"
output-name = "netron"
assets-dir = "public"
tailwind-input-file = "input.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "0.0.0.0:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
