[workspace]
resolver = "2"
members = ["src-tauri", "frontend", "backend", "app", "server"]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["json", "multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
hex = { version = "0.4.3", features = ["std"] }
http = "1.3.1"

leptos_meta = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_axum = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos-use = { version = "0.16.2" }
leptos_router = { git = "https://github.com/rvdende/leptos", branch = "css_hydration", features = [
    "nightly",
] }
server_fn = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }

# Serialization
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0.140", features = ["std"] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
futures-util = { version = "0.3" }

dashmap = { version = "6.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.19" }

partial_struct = "0.4.5"
tw_merge = { version = "0.1.6", features = ["variant"] }
phosphor-leptos = "0.8.0"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.77", features = [
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "ProgressEvent",
    "DragEvent",
    "Event",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Window",
    "Performance",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Document",
] }
surrealdb = { version = "2.3.7", default-features = false, features = [
    "protocol-ws",
] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
time = "0.3.41"
regex = { version = "1.11.2", default-features = false, features = [
    "std",
    "perf",
] }
bytes = { version = "1.10.1", default-features = false, features = ["std"] }
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "sync",
] }

dotenvy = "0.15.7"

base64 = { version = "0.22.1", default-features = false, features = ["std"] }
uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "serde",
] }

cached = { version = "0.56.0", default-features = false, features = [
    "async",
    "proc_macro",
] }

rand = { version = "0.9.2" }

infer = { version = "0.16" }

# External services

reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# UI


# Testing
serial_test = { version = "3.2.0", features = ["file_locks"] }
wasm-bindgen-test = "0.3"

# Additional dependencies
thiserror = { version = "2.0", default-features = false }
tower = { version = "0.5.2", default-features = false, features = ["util"] }

anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
data-encoding = "2.9.0"
futures-lite = "2.6.0"
iroh = "0.35.0"
iroh-gossip = "0.35.0"

[patch.crates-io]
leptos = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_meta = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_router = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
leptos_axum = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }
server_fn = { git = "https://github.com/rvdende/leptos", branch = "css_hydration" }

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = false
opt-level = 0
debug = 1     # Reduce debug info for faster compilation

[profile.dev.package."*"]
opt-level = 2

# Fast development profile for quick iteration
[profile.fast-dev]
inherits = "dev"
opt-level = 0
lto = false
codegen-units = 256
incremental = true

[profile.fast-dev.package."*"]
opt-level = 1 # Minimal optimization for deps to keep them reasonably fast

[[workspace.metadata.leptos]]
# project name
name = "netron"
bin-package = "server"
lib-package = "frontend"
output-name = "netron"
assets-dir = "public"
tailwind-input-file = "input.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "0.0.0.0:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
# Use fast-dev profile for lib (WASM) compilation
lib-profile = "fast-dev"
# Use fast-dev profile for bin (server) compilation  
bin-profile = "fast-dev"
