[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
leptos_meta = { workspace = true }
backend = { path = "../backend" }
leptos = { workspace = true }
tracing = "0.1"
leptos_router = { workspace = true }

[features]
csr = ["leptos/csr"]
hydrate = [
  "leptos/hydrate",
  "backend/hydrate",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "backend/ssr", "leptos_router/ssr"]
