[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
backend = { path = "../backend", optional = true }

leptos_meta = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
leptos_router = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tw_merge = { workspace = true, optional = true }
phosphor-leptos = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
partial_struct = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }
time = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
resend-rs = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
http = { workspace = true, optional = true }
leptos-use = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }


[features]
csr = ["leptos/csr"]
hydrate = [
  "leptos/hydrate",
  "backend/hydrate",
  "leptos_meta",
  "leptos_router",
  "phosphor-leptos",
  "urlencoding",
  "serde",
  "chrono",
  "tw_merge",
  "web-sys",
  "wasm-bindgen",
  "serde_json",
  "partial_struct",
  "time",
  "leptos-use",
  "reqwest",
  "regex",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "backend/ssr",
  "leptos_router/ssr",
  "leptos_axum",
  "tracing",
  "serde",
  "tw_merge",
  "phosphor-leptos",
  "web-sys",
  "wasm-bindgen",
  "serde_json",
  "partial_struct",
  "surrealdb",
  "chrono",
  "urlencoding",
  "time",
  "regex",
  "bytes",
  "tokio",
  "resend-rs",
  "dotenvy",
  "axum",
  "axum-extra",
  "hex",
  "http",
  "leptos-use",
  "reqwest",
  "uuid",
  "base64",
  "rand",
  "dashmap",
  "futures-util",
]
