[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
axum = { version = "0.8", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = [
  "fs",
  "cors",
  "trace",
] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
]
